--- a/style.css
+++ b/style.css
@@ -37,6 +37,29 @@ body{
 	text-align: center;
 }
 
+#input{
+	position: absolute;
+	left: 10px;
+	top:70px;
+}
+
+ul {
+	position: absolute;
+	left: 10px;
+	top:100px;
+}
+
+#add {
+	position: absolute;
+	left: 150px;
+	top:70px;
+}
+
+#remove {
+	position: absolute;
+	left: 280px;
+	top:70px;
+}
 
 
 
